--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,45 @@
 <html>
 <head>
   <title>MoveItWeb</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-<%= yield %>
+<div class="container">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="#">Move It Level Editor</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><%= link_to "Edit Levels", levels_path %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="span9">
+      <%= yield %>
+    </div>
+    <div class="span3">
+      <h2>Level Editor</h2>
+      <p>Bacon ipsum dolor sit amet tri-tip andouille ribeye venison sirloin beef ribs pork short loin pancetta. Ribeye filet mignon hamburger, corned beef tongue t-bone chicken pork chop. Rump turkey meatloaf filet mignon tenderloin jerky ham hock drumstick beef ribs spare ribs. Pastrami pork belly jerky venison, swine hamburger shankle beef ribs pork ham hock boudin turkey jowl flank shoulder.</p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
