--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,26 @@
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Edit Levels", levels_path %></li>
+            <% if user_signed_in? %>
+              <li><%= link_to current_user.email, edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <li><%= link_to "Login", new_user_session_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
     </div>
   </div>
+</div>
+<div class="container">
+<% if notice %>
+  <div class="row"><p class="notice"><%= notice %></p></div>
+<% end %>
+<% if alert %>
+  <div class="row"><p class="alert"><%= alert %></p></div>
+<% end %>
 </div>
 <div class="container">
   <div class="row">
