--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -2,11 +2,13 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
+<% unless @levels.empty? %>
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= "Creator" %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -16,21 +18,28 @@
       <tr>
         <td><%= link_to level.id, level_path(level) %></td>
         <td><%= level.name %></td>
+        <td><%= level.user.email rescue nil %></td>
         <td><%=l level.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_level_path(level), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      level_path(level),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+          <% if user_signed_in? && current_user = level.user %>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_level_path(level), :class => 'btn btn-mini' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        level_path(level),
+                        :method => :delete,
+                        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :class => 'btn btn-mini btn-danger' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<% else %>
+<p>No levels have yet been created.</p>
+<% end %>
+<% if user_signed_in? %>
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_level_path,
             :class => 'btn btn-primary' %>
+<% end %>
