--- a/app/views/levels/show.html.erb
+++ b/app/views/levels/show.html.erb
@@ -6,11 +6,17 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @level.name %></dd>
+  <dt><strong><%= "Hero x" %>:</strong></dt>
+  <dd><%= @level.hero_x %></dd>
+  <dt><strong><%= "Hero y" %>:</strong></dt>
+  <dd><%= @level.hero_y %></dd>
 </dl>
+
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               levels_path, :class => 'btn'  %>
+  <% if user_signed_in? && @level.user = current_user %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_level_path(@level), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -18,4 +24,5 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+<% end %>
 </div>
